--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chromedriver": "^96.0.0",
     "selenium-webdriver": "^4.1.0"
   }
 }
-    
